# NovaGateway

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dummy_backend.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 085aef49af1a_add_security_models.py  3a47e3e894df_add_request_logs_table.py  a5f8e91c7b8d_add_routing_models.py  cb820d7f6eef_add_cache_ttl_seconds.py
backend/app/: cache_service.py  config.py  database.py  health_checker.py  load_balancer.py  logging_config.py  main.py  proxy_service.py  routing_service.py
backend/app/middleware/: logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  request_log.py  routing.py  security.py
backend/app/routers/: admin_cache.py  admin_routing.py  admin_security.py  health.py  logs.py  proxy.py
backend/app/schemas/: request_log.py  routing.py  security.py
backend/tests/: test_integration.py  test_load_balancer.py  test_routing.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: BackendsManagement.tsx  Dashboard.tsx  RequestLogs.tsx  RoutesManagement.tsx  Security.tsx
